GNOME Bugzilla – Bug 629453
nautilus-sendto crashes: plugin_info contains NAUTILUS_CAPS_NONE in place of init() pointer
Last modified: 2010-09-13 10:55:32 UTC
Created attachment 170093 [details] [review] Simple FALSE-removing patch gnome-bluetooth: 2.31.6-0ubuntu3 nautilus-sendto: 2.31.7-0ubuntu1 Observed on Ubuntu 10.10. nautilus-sendto crashes when it is querying libnstbluetooth. ** (nautilus-sendto:12599): DEBUG: running nst_init_plugin ** (nautilus-sendto:12599): DEBUG: finished nst_init_plugin ** (nautilus-sendto:12599): DEBUG: p = 0x1beafa0 ** (nautilus-sendto:12599): DEBUG: p->info = 0x7ffdd50570e0 ** (nautilus-sendto:12599): DEBUG: p->info->init = (nil) p->info->init() routine is NULL in libnstbluetooth.so. Here's brasero plugin info: static NstPluginInfo plugin_info = { // icon; "brasero", // id "nautilus-burn", // description N_("CD/DVD Creator"), // gettext_package NULL, // capabilities NAUTILUS_CAPS_SEND_DIRECTORIES, // init init, // get_contacts_widget get_contacts_widget, // validate_destination NULL, // send_files send_files, // destroy destroy }; And here's what libnstbluetooth has: static NstPluginInfo plugin_info = { // icon; "bluetooth", // id "bluetooth", // description N_("Bluetooth (OBEX Push)"), // gettext_package GETTEXT_PACKAGE, // capabilities FALSE, // init NAUTILUS_CAPS_NONE, // get_contacts_widget init, // validate_destination get_contacts_widget, // send_files validate_destination, // destroy send_files, // ???? destroy }; So it looks like libnstbluetooth has an extra FALSE item now. Original bug report: https://bugs.launchpad.net/gnome-bluetooth/+bug/632358
commit f471d694ddd48d4a1b5ccd0e59c6dd7d5234a55d Author: Bastien Nocera <hadess@hadess.net> Date: Mon Sep 13 11:54:06 2010 +0100 Fix sendto plugin with newer nautilus-sendto Spotted by Roman Yepishev <roman.yepishev@gmail.com> https://bugzilla.gnome.org/show_bug.cgi?id=629453