Fix sendto plugin with newer nautilus-sendto

Spotted by Roman Yepishev <roman.yepishev@gmail.com>

https://bugzilla.gnome.org/show_bug.cgi?id=629453